[metadata]
name = eda_report
version = attr: eda_report.__version__
description = A simple program to automate exploratory data analysis and reporting.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = eda report
author = Abwao
author_email = abwaomusungu@gmail.com
url = https://eda-report.readthedocs.io/
license = MIT
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3.8

project_urls = 
  Source Code = https://github.com/Tim-Abwao/eda-report

[options]
packages = find:
install_requires =
  matplotlib>=3.7.0
  openpyxl>=3.1.2
  pandas>=2.0.0
  python-docx>=0.8.11
  scipy>=1.10.1
  tqdm>=4.65.0
include_package_data = True
python_requires = >=3.8

[options.entry_points]
console_scripts =
  eda-report = eda_report._cli:run_from_cli

[options.extras_require]
dev = 
  black>=23.3.0
  coverage>=7.2.3
  flake8>=6.0.0

[options.package_data]
eda_report = */*.png

[options.packages.find]
exclude = tests, tests.*
