[metadata]
name = eda_report
version = attr: eda_report.__version__
description = Automate exploratory data analysis and reporting.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = eda exploratory data analysis report
author = Abwao
author_email = abwaomusungu@gmail.com
url = https://eda-report.readthedocs.io/
license = MIT
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3.12

project_urls = 
  Source Code = https://github.com/Tim-Abwao/eda-report

[options]
packages = find:
install_requires =
  matplotlib>=3.10.0
  openpyxl>=3.1.5
  pandas>=2.2.3
  python-docx>=1.1.2
  scipy>=1.14.1
  tqdm>=4.67.1
include_package_data = True
python_requires = >=3.10

[options.entry_points]
console_scripts =
  eda-report = eda_report._cli:run_from_cli

[options.extras_require]
dev = 
  black>=24.10.0
  coverage>=7.6.10
  flake8>=7.1.1
  pytest>=8.3.4

[options.package_data]
eda_report = eda_report/images/*.png
